; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_manager.c_manager_dispatch_jobs_in_progress.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_manager.c_manager_dispatch_jobs_in_progress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@JOBS_IN_PROGRESS_PERIOD_USEC = common dso_local global i64 0, align 8
@SD_EVENT_ONESHOT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*)* @manager_dispatch_jobs_in_progress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @manager_dispatch_jobs_in_progress(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** %8, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @assert(i32* %13)
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @assert(i32* %15)
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @manager_print_jobs_in_progress(i32* %17)
  %19 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %20 = call i64 @now(i32 %19)
  %21 = load i64, i64* @JOBS_IN_PROGRESS_PERIOD_USEC, align 8
  %22 = add nsw i64 %20, %21
  store i64 %22, i64* %10, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load i64, i64* %10, align 8
  %25 = call i32 @sd_event_source_set_time(i32* %23, i64 %24)
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* %9, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %3
  %29 = load i32, i32* %9, align 4
  store i32 %29, i32* %4, align 4
  br label %34

30:                                               ; preds = %3
  %31 = load i32*, i32** %5, align 8
  %32 = load i32, i32* @SD_EVENT_ONESHOT, align 4
  %33 = call i32 @sd_event_source_set_enabled(i32* %31, i32 %32)
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %30, %28
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @manager_print_jobs_in_progress(i32*) #1

declare dso_local i64 @now(i32) #1

declare dso_local i32 @sd_event_source_set_time(i32*, i64) #1

declare dso_local i32 @sd_event_source_set_enabled(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
